<resources>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Loading data</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="group_chat">Group chat</string>
    <string name="add_friend">Add friends</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Diagnose</string>
    <string name="push_nick">IOS offline push nick</string>
    <string name="Current_version">Current version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public group</string>
    <string name="blacklist">Black list</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="mute">Mute</string>
    <string name="Hands_free">Hands free</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="unable_to_connect">Unable to connect to the server</string>
    <string name="newchat">Create new group</string>
    <string name="agree">Agree</string>
    <string name="Group_chat">Group chat</string>
    <string name="chat_room">Chat room</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="not_add_myself">"Can't add myself"</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="send_successful">Request was sent, waiting for the peer to accept</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="expression">[expression]</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="Whether_to_empty_all_chats">Clear all messages?</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="send_failure_please">Send failure, please test whether the server connection</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="Move_into_blacklist_failure">Move into blacklist failure</string>
    <string name="you_are_group">You have been kicked off from the group</string>
    <string name="the_current_group">The current group has been dismissed</string>
    <string name="Cant_chat_with_yourself">cannot chat with yourself</string>
    <string name="deleting">Deleting..</string>
    <string name="Delete_failed">Failed to delete</string>
    <string name="Is_moved_into_blacklist">Moving to blacklist..</string>
    <string name="Log_uploaded_successfully">Log was uploaded successfully</string>
    <string name="Log_Upload_failed">Failed to upload the log</string>
    <string name="get_failed_please_check">Failed to retrieve, please check the network or try again later</string>
    <string name="people">people</string>
    <string name="being_added">added</string>
    <string name="is_quit_the_group_chat">Exiting group</string>
    <string name="chatting_is_dissolution">Dismissing group</string>
    <string name="are_empty_group_of_news">Clearing messages</string>
    <string name="is_modify_the_group_name">Modifying the group name..</string>
    <string name="Modify_the_group_name_successful">Modify the group name successful</string>
    <string name="change_the_group_name_failed_please">Failed to change the group name, please check the network or try again later</string>
    <string name="Are_moving_to_blacklist">Moving to blacklist</string>
    <string name="messages_are_empty">Messages has been cleared</string>
    <string name="failed_to_move_into">Failed to move to the blacklist, please check the network or try again later</string>
    <string name="cell_phone">手机号</string>
    <string name="password">密码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="personal_regist">个人注册</string>
    <string name="company_regist">企业注册</string>
    <string name="identifying_code">验证码</string>
    <string name="hint_enter_conventional_cellphone">请输入常用手机号</string>
    <string name="hint_identifying_code">4位验证码</string>
    <string name="hint_password">请设置6-16位密码</string>
    <string name="show_password">明文密码</string>
    <string name="next_step">下一步</string>
    <string name="regist_toast_1">注册即视为同意</string>
    <string name="regist_toast_2">《足财网用户账号服务协议》</string>
    <string name="index">首页</string>
    <string name="my">我的</string>
    <string name="tender">发标</string>
    <string name="service">服务</string>
    <string name="refund_reason">退款原因</string>
    <string name="refund_price">退款金额</string>
    <string name="refund_des">退款说明</string>
    <string name="hint_enter_refund_price">请输入退款金额</string>
    <string name="hint_enter_refund_des">请输入退款说明</string>
    <string name="submit_application">提交申请</string>
    <string name="new_alerts">新消息通知</string>
    <string name="new_alerts_prompt">如果你要关闭或者开启足智的新消息通知，请在手机的 &quot;应用程序信息&quot; - &quot;显示通知&quot; 进行修改</string>
    <string name="new_alerts_show_details">通知消息显示详情</string>
    <string name="new_alerts_details">若关闭，当收到消息时，通知提示将不显示发信人的内容摘要</string>
</resources>