<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toggle="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_identifying_code_disable">

    <include
        android:id="@+id/titleBar"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:text="@string/new_alerts"
            android:gravity="center_vertical"
            android:textColor="@color/color_bg_title_bar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newAlertsOpenOrClose"
            android:textSize="14sp"
            android:textColor="@color/color_text_hint"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/new_alerts_prompt"
        android:textColor="@color/color_text_hint"
        android:textSize="13sp"
        android:singleLine="false"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/color_white"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_alerts_show_details"
            android:layout_marginLeft="15dp"
            android:textColor="@color/color_bg_title_bar"
            android:textSize="14sp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp">
            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/newAlertsButton"
                android:layout_width="54dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                toggle:isDefaultOn="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/new_alerts_details"
        android:textSize="13sp"
        android:singleLine="false"
        android:textColor="@color/color_text_hint"/>
</LinearLayout>